--- a/upload-pedagotech/package.json
+++ b/upload-pedagotech/package.json
@@ -13,10 +13,12 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
